--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <meta http-equiv="refresh" content="0;url=https://github.com/vincentcodispottwo/Redirect">
+    <meta http-equiv="refresh" content="0;url=https://vincentcodispottwo.github.io/Redirect">
     <script type="text/javascript">
         // Function to clean the URL and redirect
         function cleanAndRedirect() {
@@ -8,7 +8,7 @@
             
             // Check if "/Redirect" exists in the URL
             if (currentURL.indexOf('/Redirect') !== -1) {
-                var cleanURL = "https://github.com/vincentcodispottwo/Redirect"; // Base URL to redirect to
+                var cleanURL = "https://vincentcodispottwo.github.io/Redirect"; // Base URL to redirect to
                 // If the current URL is different from the clean URL, redirect to the clean version
                 if (currentURL !== cleanURL) {
                     window.location.replace(cleanURL); // Redirect to clean URL
